# AnalyzeBugger

./: .gitignore  .mcp.json  VISION.md  build.bat  index.html  package-lock.json  package.json  tailwind.config.js
config/: settings.yaml
mcp-server/: ai_unpacker.py  analyzebugger_mcp.py  crypto_analyzer.py  deep_analyzer.py  generic_tracer.py  ida_integration.py
samples/crackmes/: README.md  TEST1.COM  TEST2.COM  TEST3.COM  TEST4.COM  TEST4.COM.i64  TEST5.COM  TEST6.COM  TEST7.COM
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mcp_api.rs
src-tauri/src/engine/: ffi.rs  mod.rs  session.rs
src-tauri/src/intel_pt/: analysis.rs  config.rs  decoder.rs  mod.rs  trace.rs  types.rs  winipt.rs
src/components/ai/: AIQueryPanel.tsx  ApiKeyForm.tsx  AutoLabeler.tsx  AutonomousAnalyst.tsx  BehavioralPredictor.tsx  FunctionSimilarity.tsx  ReportGenerator.tsx  SemanticAnalyzer.tsx  VulnerabilityScanner.tsx  index.ts
src/components/analysis/: AnalysisSidebar.tsx  IocPanel.tsx  MitrePanel.tsx  NarrativePanel.tsx  index.ts
src/components/claude/: ChatPanel.tsx
src/components/debug/: BreakpointManager.tsx  CpuPanel.tsx  DisassemblyView.tsx  ExportsPanel.tsx  FunctionsPanel.tsx  HexView.tsx  ImportsPanel.tsx  IntelPTPanel.tsx  MemoryViewer.tsx  ModuleList.tsx  PatchEditor.tsx  RegisterPanel.tsx  SectionsPanel.tsx  StackPanel.tsx  StringsView.tsx  TracePanel.tsx  XrefsPanel.tsx
src/services/: claudeService.ts
src/stores/: analysisStore.ts  sessionStore.ts
(+6 files in other folders)
