[package]
name = "analyzebugger"
version = "0.1.0"
description = "AI-Powered Reverse Engineering Platform"
authors = ["BIP Team"]
edition = "2021"

[lib]
name = "analyzebugger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
capstone = "0.12"
regex = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
# MCP HTTP API
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Intel PT support (Windows driver interface)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = "z"
strip = true
